<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/txtViewCoste"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:foreground="?attr/selectableItemBackground"
    android:background="@android:color/white"
    app:cardCornerRadius="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp">


        <ImageView
            android:id="@+id/icoPrio"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/descrIcoPrio"
            android:padding="2dp" />

        <TextView
            android:id="@+id/lblNomTareaCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/lblCosteCont"
            android:layout_toEndOf="@+id/icoPrio"
            android:text="@string/lblNomTareaCont"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblDescripcionCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblNomTareaCont"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/lblFechaCont"
            android:layout_toEndOf="@+id/icoPrio"
            android:text="@string/lblDescripcionCont"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/icoBorrar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/descrIcoBorrar" />

        <TextView
            android:id="@+id/lblCosteCont"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/lblMonedaCont"
            android:text="@string/lblCosteCont"
            android:textAlignment="viewEnd"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblMonedaCont"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/icoBorrar"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblFechaCont"
            android:layout_width="78dp"
            android:layout_height="20dp"
            android:layout_below="@+id/lblCosteCont"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="1dp"
            android:layout_toStartOf="@+id/icoBorrar"
            android:textAlignment="viewEnd" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>